# dj-control-room

./: .gitignore  404.html  CREATING_PANELS.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: FUNDING.yml
api-reference/: index.html
configuration/: index.html
creating-panels/: index.html
development/: index.html
dj_control_room/: admin.py  admin_integration.py  apps.py  conf.py  featured_panels.py  models.py  panels.py  registry.py  urls.py  utils.py  views.py
dj_control_room/static/dj_control_room/css/: control-room.css  styles.css
dj_control_room/templates/admin/dj_control_room/: base.html  index.html  install_panel.html  install_panel_cache.html  install_panel_celery.html  install_panel_redis.html  install_panel_urls.html  styles.css
docs/: README.md  api-reference.md  configuration.md  creating-panels.md  development.md  index.md  installation.md
example_project/example_project/: apps.py  example_panels.py  settings.py  urls.py
installation/: index.html
search/: search_index.json
tests/: base.py  conftest.py  test_admin.py  test_registry.py  test_utils.py
