[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-control-room"
version = "1.0.0"
description = "The control room for your Django app"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Yasser Toruno", email = "your.email@example.com"},
]
maintainers = [
    {name = "Yasser Toruno", email = "your.email@example.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["django", "admin", "panel"]
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
# Panel extras - install specific panels
redis = ["dj-redis-panel>=0.7.5"]
cache = ["dj-cache-panel>=0.2.6"]
urls = ["dj-urls-panel>=0.2.1"]
celery = ["dj-celery-panel>=0.3.4"]
all = [
    "dj-redis-panel>=0.7.5",
    "dj-cache-panel>=0.2.6",
    "dj-urls-panel>=0.2.1",
    "dj-celery-panel>=0.3.4",
]

# Development extras
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.2.0",
    "django-redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "mkdocs-material>=9.1.12",
]
build = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://yassi.github.io/dj-control-room/"
Documentation = "https://yassi.github.io/dj-control-room/"
Repository = "https://github.com/yassi/dj-control-room"
"Bug Tracker" = "https://github.com/yassi/dj-control-room/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "example_project*"]

[tool.setuptools.package-data]
"dj_control_room" = [
    "templates/**/*",
    "static/**/*"
]

# pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["dj_control_room"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "example_project/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
